--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -7,6 +7,15 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" th:href="@{/styles.css}">
 </head>
+
+<head th:fragment="head2">
+    <meta charset="UTF-8"/>
+    <title>Categories</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" th:href="@{/styles.css}">
+</head>
+
 <body>
 
 <nav th:fragment="header">
@@ -15,6 +24,15 @@
         <li class="nav-item"><a class="nav-link" href="/events">All Events</a></li>
         <li class="nav-item"><a class="nav-link" href="/events/create">Create Event</a></li>
         <li class="nav-item"><a class="nav-link" href="/events/delete">Delete Events</a></li>
+    </ul>
+</nav>
+
+<nav th:fragment="header2">
+    <h1 th:text="${title}">All Categories</h1>
+    <ul class="nav">
+        <li class="nav-item"><a class="nav-link" href="/eventCategories">All Categories</a></li>
+        <li class="nav-item"><a class="nav-link" href="/eventCategories/create">Create Category</a></li>
+<!--        <li class="nav-item"><a class="nav-link" href="/events/delete">Delete Events</a></li>-->
     </ul>
 </nav>
 
