After Ch18 video 1

--- a/src/main/resources/templates/eventcategories/index.html
+++ b/src/main/resources/templates/eventcategories/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
-<head th:replace="fragments :: head2"></head>
+<!--<head th:replace="fragments :: head2"></head>-->
+<head th:replace="fragments :: head"></head>
 <body class="container">
 
-<header th:replace="fragments :: header2"></header>
+<!--<header th:replace="fragments :: header2"></header>-->
+<header th:replace="fragments :: header"></header>
 
 <table class="table table-striped">
     <thead>
