--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -24,17 +24,19 @@
         <li class="nav-item"><a class="nav-link" href="/events">All Events</a></li>
         <li class="nav-item"><a class="nav-link" href="/events/create">Create Event</a></li>
         <li class="nav-item"><a class="nav-link" href="/events/delete">Delete Events</a></li>
+        <li class="nav-item"><a class="nav-link" href="/eventCategories">All Categories</a></li>
+        <li class="nav-item"><a class="nav-link" href="/eventCategories/create">Create Category</a></li>
     </ul>
 </nav>
 
-<nav th:fragment="header2">
-    <h1 th:text="${title}">All Categories</h1>
-    <ul class="nav">
-        <li class="nav-item"><a class="nav-link" href="/eventCategories">All Categories</a></li>
-        <li class="nav-item"><a class="nav-link" href="/eventCategories/create">Create Category</a></li>
-<!--        <li class="nav-item"><a class="nav-link" href="/events/delete">Delete Events</a></li>-->
-    </ul>
-</nav>
+<!--<nav th:fragment="header2">-->
+<!--    <h1 th:text="${title}">All Categories</h1>-->
+<!--    <ul class="nav">-->
+<!--        <li class="nav-item"><a class="nav-link" href="/eventCategories">All Categories</a></li>-->
+<!--        <li class="nav-item"><a class="nav-link" href="/eventCategories/create">Create Category</a></li>-->
+<!--&lt;!&ndash;        <li class="nav-item"><a class="nav-link" href="/events/delete">Delete Events</a></li>&ndash;&gt;-->
+<!--    </ul>-->
+<!--</nav>-->
 
 </body>
 </html>
